data/derived/comb/progs/unify/prog3475.ml.out
Characters 79-80:
  wwhile (f, b);;
             ^
Error: This expression has type 'a * bool
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a * bool
